--- a/NOBOPROJETO/EX1.html
+++ b/NOBOPROJETO/EX1.html
@@ -14,7 +14,7 @@
         <nav>
             <input type="checkbox" name="" id="check">
             <label for="check">
-                <img src="Imagens/menu-hamburguer.svg" alt="menu" class="fas fa-bars" id="btn">
+                <img src="Imagens/menu-hamburguer.png" alt="menu" class="fas fa-bars" id="btn">
                 <i class="fas fa-times" id="cancel"></i>
             </label>
             <h1>Espaço Nulo</h1>
@@ -28,7 +28,7 @@
     </header>
     <main>
         <div class="C">
-            <div>
+            <div class="copypasta">
                 <h1>FFFFFFFFF</h1>
                 <blockquote>
                     <p><em>"No final voce vai perceber que você é a piada."</em></p>
@@ -37,7 +37,8 @@
                 <h2>Quem sou eu?</h2>
                 <p>Quem <strong>sou eu?</strong> Do que você me chamou? Sim, obviamente, se eu for um gênio (o que eu sou), entendo a natureza do seu comentário embaraçosamente neaurotípico. Minha pergunta não foi baseada em um simples mal-entendido de seu dialeto leigo - isso nunca acontece comigo, eu coloquei isso para você ter certeza de que acredita sinceramente em chamar um prodígio matemático, físico amador, faixa-preta tikwodo, e, em geral, um gigante mental um “troll” seria um curso de ação sábio. Sua sorte inacreditável, eu tenho uma mente afiada, mas um temperamento contundente, se eu quisesse que você fosse eu poderia coordenar uma injeção de script no banco de dados do Reddit em questão de segundos, uma vez que tivesse recuperado a cópia hash de sua senha, poderia descriptografá-la em 30 minutos com lápis e papel. Em seguida, vem a vingança: eu ordenei o respeito de membros de gangues, grupos de gângsteres e agências de inteligência estrangeiras ao redor do mundo, com um único telefonema eu seria apanhado por um Airbus especialmente customizado e armado e levado diretamente para o que era sua casa (na época) para impedir que seus dedos digitem um insulto novamente (ou até mesmo se mexam mais, o que significa que até mesmo seu trabalho de baixa qualificação no MacDonald's estaria acabado). Com um único movimento coordenado do meu pulso, você se tornaria o novo Stephen Hawking (se o cérebro dele tivesse a mesma complexidade dos picles que você colocava no pão das pessoas). Com meu conhecimento intimidante de física, eu colheria seu corpo para geração de energia a partir da fusão nuclear (pelo menos assim você seria finalmente útil para a sociedade), com aceleradores de prtaículas em pequena escala executados a partir de ferimonas químicas que você liberou devido ao seu terror bem fundado. arrancaria os elementos atômicos mais leves de seu corpo em segundos. Minhas habilidades matemáticas falam por si, de jeito nenhum eu desperdiçaria meu conhecimento com você nessa área. Portanto, lembre-se disso antes.</p>
             </div>
-            <div class="profile"><img class="Profile" src="Imagens/ELEF.png" alt="eu?">
+            <div class="profile">
+                <img class="Profile" src="Imagens/ELEF.png" alt="eu?">
                 <audio preload="auto" controls autoplay>
                     <source src="Audio/FTHEME.mp3" type="audio/mpeg">
                     <p>Não foi possivel reproduzir o audio</p>
