--- a/NOBOPROJETO/EX1.html
+++ b/NOBOPROJETO/EX1.html
@@ -51,7 +51,8 @@
             <figure>
                 <img src="Imagens/F1.png" alt="">
                     <figcaption>Momentos antes de Dyaf escravizar toda população local.</figcaption>
-                </img><img src="Imagens/F2.png" alt="">
+                </img>
+                <img src="Imagens/F2.png" alt="">
                     <figcaption>Apenas uma das outra 5641651 vezes que platinou terraria. <small>porfavor re-logic para de lançar conquistas não aguento mais</small></figcaption>
                 </img>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/VsMq48Yy5rg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -61,11 +62,14 @@
                 </img>
                 <img src="Imagens/F4.png" alt="">
                     <figcaption>Motivos do porque parei de jogar paladins.</figcaption>
-                </img><img src="Imagens/F5.png" alt="">
+                </img>
+                <img src="Imagens/F5.png" alt="">
                     <figcaption>Fade alcançando a nota máxima no teste biblico.</figcaption>
-                </img><img src="Imagens/F6.png" alt="">
+                </img>
+                <img src="Imagens/F6.png" alt="">
                     <figcaption>Plena Calma.</figcaption>
-                </img><img src="Imagens/F7.png" alt="">
+                </img>
+                <img src="Imagens/F7.png" alt="">
                     <figcaption>KKKKKKKKKKKKKKKKKKKKKKKKqporraéessa.</figcaption>
                 </img>
             </figure>
