--- a/NOBOPROJETO/EX2.html
+++ b/NOBOPROJETO/EX2.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <div class="C">
-            <div>
+            <div class="copypasta">
                 <h1>HHHHHHHHH</h1>
                 <blockquote>
                     <p><em>"Mangá mídia física é igual a peitos, ficam tão bem em meu monitor mas eu adoraria poder segura-los."</em></p>
@@ -67,6 +67,7 @@
                 </audio>
             </div>
         </div>
+
         <h2>Memorias</h2>
         <figure>
             <img src="Imagens/H1.png" alt="">
