--- a/NOBOPROJETO/EX3.html
+++ b/NOBOPROJETO/EX3.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <div class="C">
-            <div>
+            <div class="copypasta">
                 <h1>GGGGGGGGG</h1>
                 <blockquote>
                     <p><em>"E o Paladins?"</em></p>
