--- a/NOBOPROJETO/EX4.html
+++ b/NOBOPROJETO/EX4.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <div class="C">
-            <div>
+            <div class="copypasta">
                 <h1><a href="https://www.youtube.com/@tbigongue7168">TTTTTTTTT</a></h1>
                 <blockquote>
                     <p><em>"mano...MANO..AAAAAAAAAAAAAAAAAA"</em></p>
