--- a/NOBOPROJETO/EX3.html
+++ b/NOBOPROJETO/EX3.html
@@ -11,6 +11,11 @@
 <body>
     <header>
         <nav>
+            <input type="checkbox" name="" id="check">
+            <label for="check">
+                <img src="Imagens/menu-hamburguer.png" alt="menu" class="fas fa-bars" id="btn">
+                <i class="fas fa-times" id="cancel"></i>
+            </label>
             <h1>Espaço Nulo</h1>
             <ul>
                 <li><a href="EX1.html">F</a></li>
