--- a/NOBOPROJETO/EX2.html
+++ b/NOBOPROJETO/EX2.html
@@ -16,7 +16,9 @@
                 <img src="Imagens/menu-hamburguer.png" alt="menu" class="fas fa-bars" id="btn">
                 <i class="fas fa-times" id="cancel"></i>
             </label>
-            <h1>Espaço Nulo</h1>
+            <a href="Home.html">
+                <h1>Espaço Nulo</h1>
+            </a>
             <ul>
                 <li><a href="EX1.html">F</a></li>
                 <li><a href="EX2.html">H</a></li>
