--- a/NOBOPROJETO/Home.html
+++ b/NOBOPROJETO/Home.html
@@ -25,7 +25,7 @@
                             <li><a href="EX4.html">Tbigongue</a></li>
                         </ul>
                     </li>
-                    <li><a href="">Área de Testes</a></li>
+                    <li><a href="Areadeteste.html">Área de Testes</a></li>
                     <li><a href="">Parte Séria</a></li>
                 </ul>
             </div>
