--- a/NOBOPROJETO/Areadeteste.html
+++ b/NOBOPROJETO/Areadeteste.html
@@ -39,7 +39,7 @@
                     <form action="login.php" method="post" autocomplete="on">
                         <p><label for="lnome">Nome:</label> <input type="text" name="nome" id="lnome" required autocomplete="name"></p>
                         <p><label for="lsenha">Senha:</label><input type="password" name="senha" id="lsenha" required autocomplete="current-password"></p>
-                        <p><input type="submit" value="Login"></p>
+                        <p><label for="lsubmit" class="botao">Login<input type="submit" value="" id="lsubmit"></label></p>
                     </form>
                 </div>
                 <div class="login">
@@ -48,7 +48,7 @@
                         <p><label for="cnome">Nome:</label> <input type="text" name="nome" id="cnome" required autocomplete="name"></p>
                         <p><label for="cemail">Email:</label> <input type="email" name="email" id="cemail" required autocomplete="email"></p>
                         <p><label for="csenha">Senha:</label> <input type="password" name="senha" id="csenha" required minlength="5" autocomplete="new-password"></p>
-                        <p><input type="submit" value="Cadastrar-se"></p>
+                        <p><label for="csubmit" class="botao" >Cadastrar-se<input type="submit" value="" id="csubmit"></label></p>
                     </form>
                 </div>
 
