--- a/NOBOPROJETO/Home.html
+++ b/NOBOPROJETO/Home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nulo</title>
     <link rel="stylesheet" href="Homestyle.css">
+    <script defer src="app.js"></script>
 </head>
 <body>
     <header>
@@ -33,7 +34,7 @@
     </header>
     <main>
         <div class="introducao">
-            <div class="iconteudo">
+            <div class="iconteudo hidden">
                 <h1>Home</h1>
                 <h2>Mundo visto pela minha visão</h2>
             </div>
@@ -49,35 +50,39 @@
                 </p>
             </div>
         </div>
-        <div class="membros">
-            <h1><a href="#">Os Cavaleiros do Foda-se</a></h1>
-            <div class="box">
-                <div class="row1">
-                    <div class="perfil">
-                        <a href="EX1.html">
-                            <img src="Imagens/ELEF.png" alt="">
-                            <p>Fayd</p>
-                        </a>
-                    </div>
-                    <div class="perfil">
-                        <a href="EX2.html">
-                            <img src="Imagens/ELEH.png" alt="">
-                            <p>Hiki</p>
-                        </a>
-                    </div>
-                </div>
-                <div class="row2">
-                    <div class="perfil">
-                        <a href="EX3.html">
-                            <img src="Imagens/ELEG.png" alt="">
-                            <p>Guirome</p>
-                        </a>
-                    </div>
-                    <div class="perfil">
-                        <a href="EX4.html">
-                            <img src="Imagens/ELET.png" alt="">
-                            <p>Tbigongue</p>
-                        </a>
+        <div class="back">
+            <div class="hidden">
+                <div class="membros">
+                    <h1><a href="#">Os Cavaleiros do Foda-se</a></h1>
+                    <div class="box">
+                        <div class="row1">
+                            <div class="perfil hidden">
+                                <a href="EX1.html">
+                                    <img src="Imagens/ELEF.png" alt="">
+                                    <p>Fayd</p>
+                                </a>
+                            </div>
+                            <div class="perfil hidden">
+                                <a href="EX2.html">
+                                    <img src="Imagens/ELEH.png" alt="">
+                                    <p>Hiki</p>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="row2">
+                            <div class="perfil hidden">
+                                <a href="EX3.html">
+                                    <img src="Imagens/ELEG.png" alt="">
+                                    <p>Guirome</p>
+                                </a>
+                            </div>
+                            <div class="perfil hidden">
+                                <a href="EX4.html">
+                                    <img src="Imagens/ELET.png" alt="">
+                                    <p>Tbigongue</p>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
