--- a/NOBOPROJETO/Servidor.html
+++ b/NOBOPROJETO/Servidor.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servidor</title>
     <script src="função.js"></script>
+    <script defer src="app.js"></script>
     <link rel="stylesheet" href="Servidorstyle.css">
     <link rel="stylesheet" href="SDesktopstyle.css">
 </head>
@@ -37,8 +38,8 @@
     <main>
         <div class="introducaoback">
             <div class="iconteudo">
-                <h1>The Safe & Sound</h1>
-                <p>Local de degenerado</p>
+                <h1 class="hidden">The Safe & Sound</h1>
+                <p class="hidden">Local de degenerado</p>
             </div>
         </div>
         <div class="texto">
