--- a/NOBOPROJETO/Servidor.html
+++ b/NOBOPROJETO/Servidor.html
@@ -47,7 +47,88 @@
                 <h2>Origem</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde dolores corporis earum ratione nesciunt voluptatem hic animi incidunt. Dolorum cum, hic cumque id necessitatibus quas quidem beatae nam obcaecati quo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium illo tempora earum saepe minus fuga magni ab itaque minima quidem nisi nulla vel, ad, commodi dolore? Necessitatibus iure molestiae illo?</p>
                 <h2>Memorias</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure temporibus natus ab corporis. Placeat adipisci eius corporis quod distinctio. Nemo, repudiandae optio. Ad aspernatur ratione deserunt sed neque eum illo! lore</p>
+                <div class="img">
+                    <figure>
+                        <img src="Imagens/Gerak18.png" alt="">
+                        <figcaption>Teste</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Imagens/Geral.png" alt="">
+                        <figcaption>Teste</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Imagens/Geral2.png" alt="">
+                        <figcaption>Teste</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Imagens/Geral3.png" alt="">
+                        <figcaption>Teste</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Imagens/Geral4.png" alt="">
+                        <figcaption>Teste</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Imagens/Geral5.png" alt="">
+                        <figcaption>Teste</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Imagens/Geral6.png" alt="">
+                        <figcaption>Teste</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Imagens/Geral7.png" alt="">
+                        <figcaption>Teste</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Imagens/Geral8.png" alt="">
+                        <figcaption>Teste</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Imagens/Geral9.png" alt="">
+                        <figcaption>Teste</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Imagens/Geral10.png" alt="">
+                        <figcaption>Teste</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Imagens/Geral12.png" alt="">
+                        <figcaption>Teste</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Imagens/Geral13.png" alt="">
+                        <figcaption>Teste</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Imagens/Geral14.png" alt="">
+                        <figcaption>Teste</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Imagens/Geral15.png" alt="">
+                        <figcaption>Teste</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Imagens/Geral16.png" alt="">
+                        <figcaption>Teste</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Imagens/Geral17.png" alt="">
+                        <figcaption>Teste</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Imagens/Geral18.png" alt="">
+                        <figcaption>Teste</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Imagens/Geral1Natal.png" alt="">
+                        <figcaption>Teste</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Imagens/Geral3Natal.png" alt="">
+                        <figcaption>Teste</figcaption>
+                    </figure>
+                </div>
             </div>
         </div>
         <div class="membros">
