--- a/NOBOPROJETO/Areadeteste.html
+++ b/NOBOPROJETO/Areadeteste.html
@@ -19,7 +19,7 @@
                 </a>
                 <i class="Icon" id="burguer"><img src="Imagens/menu-hamburguer.png" alt="menu" onclick="clickmenu()"></i>
                 <ul class="menu" id="fmenu">
-                    <li><a href="">Servidor</a></li>
+                    <li><a href="Servidor.html">Servidor</a></li>
                     <li class="hmembros"><a href="">Cavaleiros</a>
                         <ul>
                             <li><a href="EX1.html">Fayd</a></li>
